--- a/app/design/frontend/Magento/HomePage/Magento_Theme/templates/html/recentview.phtml
+++ b/app/design/frontend/Magento/HomePage/Magento_Theme/templates/html/recentview.phtml
@@ -1,5 +1,5 @@
 <div class="mt-5">
-<h1>Best Seller </h1>
+<h1>Your Recently Viewed Products</h1>
         <hr class="mt-3">
         <div class="row">
             <div class="col-12">
